# AI-Governed-Platform-Automation

./: README.md
docs/: agent_trigger.md  architecture.md  roadmap.md  threat-model.md
sas_client/: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
sas_client/.github/workflows/: format_lint.yaml.txt
sas_client/.rag_index/: meta.jsonl  vectors.npy
sas_client/examples/: ansible.yaml  github.yaml  infoblox.yaml  nutanix.yaml  terraform.yaml
sas_client/src/sas_client/: __init__.py  enums.py
sas_client/src/sas_client/agent/: agent.py  rag_sources.py
sas_client/src/sas_client/api/: ansible.py  github.py  infoblox.py  nutanix.py  terraform.py  vmaria.py.bk
sas_client/src/sas_client/api/common/: api_client.py  config_mixin.py  vault.py
sas_client/src/sas_client/cli/: agent_cli.py  cli.py  infoblox_cli.py  sas_agent_rag.py  sas_index_github_file.py  sas_search.py
sas_client/src/sas_client/config/: ansible_config.py  config_mixer.py  github_config.py  infoblox_config.py  nutanix_config.py  terraform_config.py
sas_client/src/sas_client/llm/: embeddings.py  embeddings_ollama.py
sas_client/src/sas_client/nlp/: chunking.py
sas_client/src/sas_client/rag/: index_github.py
sas_client/src/sas_client/utils/: hostname.py  logger.py  utils.py
sas_client/src/sas_client/vectorstores/: simple.py
sas_server/: .containerignore  Containerfile  README.md  requirements.txt
sas_server/.github/workflows/: build_container_image.yaml  format_lint.yaml
sas_server/app/: main.py
(+7 files in other folders)
